fix user short layout bug with long username
Also fix save issue on store

--- a/css/obBase.css
+++ b/css/obBase.css
@@ -265,6 +265,7 @@ form {
   width: 100%;
 }
 
+.flexRow .flexCol-11,
 .flexRow .flexCol-11 { flex-basis: 91.66666666666666%; }
 
 .flexRow .flexCol-10 { flex-basis: 83.33333333333334%; }
@@ -3075,6 +3076,18 @@ input[type="checkbox"].fieldItem:checked + label .togLabelOff {
 
 #ov1 .width600 {
   width: 600px;
+}
+
+#ov1 .maxWidth100 {
+  max-width: 100px;
+}
+
+#ov1 .maxWidth150 {
+  max-width: 150px;
+}
+
+#ov1 .maxWidth200 {
+  max-width: 200px;
 }
 
 #ov1  .cursorDefault {
